# wtv-app

./: Dockerfile  README.md  app.ini  pyproject.toml  requirements.txt  run.py
.github/workflows/: dev.yml
app/: __init__.py  bundles.py  config.py  extensions.py  forms.py  functions.py
app/models/: channels.py  packs.py  user.py
app/routes/: channels.py  packs.py  user.py
app/static/css/: main.css
app/static/css/blocks/: table.css
app/static/js/blocks/: js1.js  js2.js  js3.js
app/templates/channel/: all.html  create.html  update.html
app/templates/main/: _flash.html  _footer.html  _header.html  base.html  index.html
app/templates/pack/: all.html  create.html
app/templates/user/: all.html  create.html  login.html  register.html  update.html
helm/mariadb/: Chart.yaml  values.yaml
helm/mariadb/templates/: _helpers.tpl  deployment.yaml  pvc.yml  service.yaml  storageclass.yml
helm/nginx/: Chart.yaml  values.yaml
helm/nginx/templates/: _helpers.tpl  configmap.yml  deployment.yaml  service.yaml
helm/wtvapp/: Chart.yaml  values.yaml
helm/wtvapp/templates/: deployment.yaml  pv.yml  pvc.yml  service.yaml
k8s/: flask.yml  mariadb.yml  nginx.yml
