[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "1.0.0"
description = "Smotri.sh web app"
authors = [
    { name = "Dmitrii", email = "ufocultist@icloud.com" }
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true